set donate iframe to 590, fix overflow

--- a/works/fljk1/main.css
+++ b/works/fljk1/main.css
@@ -169,7 +169,6 @@ html, body, .container {
 
 .footer {
    height: 180px;
-   width: 510px;    
 }
 
 .footer__about {
